--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,3 +1,2 @@
-<p>
-  movies works!
-</p>
+<app-movie-row *ngFor="let movie of movies" [movie]="movie"></app-movie-row>
+<router-outlet></router-outlet>
