--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,6 +3,9 @@
 		<li class="nav-item">
 			<a class="nav-link" routerLink="/movies" routerLinkActive="active">Movies</a>
 		</li>
+		<li>
+			<app-search></app-search>
+		</li>
 	</ul>
 </nav>
 <div class="container">
