--- a/src/app/components/search/search-page/search-page.component.html
+++ b/src/app/components/search/search-page/search-page.component.html
@@ -1,3 +1,4 @@
 <p>
-  search-page works!
+  Pretraga po terminu: {{ term }}
+  <app-movie-row *ngFor="let movie of movies" [movie]="movie"></app-movie-row>
 </p>
