--- a/src/app/components/movies/movie-row/movie-row.component.html
+++ b/src/app/components/movies/movie-row/movie-row.component.html
@@ -7,5 +7,6 @@
 		<span>Movie duration: {{ movie.duration}}</span><br>
 		<span>Release date: {{ movie.releaseDate}}</span><br>
 		<span>Genres: {{movie.genres }}</span><br>
+		<button type="submit" class="btn btn-primary" (click)="selectMovie(true)" [disabled]="selected">Select</button>
 	</li>
 </ul>
