--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,2 +1,19 @@
-<app-movie-row *ngFor="let movie of movies" [movie]="movie"></app-movie-row>
+<div class="container">
+<p>Trenutno selektovano: {{ count }} filmova</p>
+<hr>
+	<button class="btn btn-primary">
+        Sort by name
+    </button>
+    <button class="btn btn-primary">
+        Sort by duration
+    </button>
+    <button class="btn btn-primary">
+        Reset
+    </button>
+    <button class="btn btn-primary">
+        Select all
+    </button>
+    <hr>
+<app-movie-row (onSelect)="onSelect($event)" *ngFor="let movie of movies" [movie]="movie"></app-movie-row>
+</div>
 <router-outlet></router-outlet>
