--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,10 +1,13 @@
 <div class="container">
 <p>Trenutno selektovano: {{ count }} filmova</p>
 <hr>
-	<button class="btn btn-primary">
-        Sort by name
+	<button class="btn btn-primary" (click)="sortingMoviesByNameAsc()">
+        A-Z
     </button>
-    <button class="btn btn-primary">
+    <button class="btn btn-primary" (click)="sortingMoviesByNameDesc()">
+        Z-A
+    </button>
+    <button class="btn btn-primary" (click)="sortingMoviesByDuration()">
         Sort by duration
     </button>
     <button class="btn btn-primary" (click)="selectedAll = false; selectedAny = false;" (click)="deselectAllCounter()">
