--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -17,6 +17,8 @@
         Select all
     </button>
     <hr>
-<app-movie-row (onSelect)="onSelect($event)" *ngFor="let movie of movies" [movie]="movie" [selectedSome]="selectedSome" [selectedAll]="selectedAll"></app-movie-row>
+<app-movie-row (onSelect)="onSelect($event)" *ngFor="let movie of movies | paginate: { itemsPerPage: 5, currentPage: p }" [movie]="movie" [selectedSome]="selectedSome" [selectedAll]="selectedAll"></app-movie-row>
+<hr>
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
 </div>
 <router-outlet></router-outlet>
